--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reown/appkit-adapter-wagmi": "^1.0.1",
     "@tanstack/react-query": "^5.56.2",
     "canvas": "^3.0.1",
+    "fabric": "^6.5.4",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "qrcode": "^1.5.4",
