--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_PROJECT_ID='hero-next'
+TWITTER_ID=TXU5VS1uVmRvUlZjSWtuN21sbHU6MTpjaQ
+TWITTER_SECRET=lrKnMDOn6X_dX-M0TpiWPqldFQksYT6KOXJvvZzcdrAkd5xxA8
+NEXTAUTH_URL=http://localhost:4456
+NEXTAUTH_SECRET=1qAkNRstF2Uxq3uLRQW5UpyoVh+V9rVYD7WnYUw7DI8=
