--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.6.14",
     "@napi-rs/canvas": "^0.1.65",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
@@ -16,8 +17,10 @@
     "@tanstack/react-query": "^5.56.2",
     "canvas": "^3.0.1",
     "fabric": "^6.5.4",
+    "framer-motion": "^12.4.1",
     "moment": "^2.30.1",
     "next": "14.2.4",
+    "next-auth": "^4.24.11",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
