--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvas": "^3.0.1",
     "fabric": "^6.5.4",
     "framer-motion": "^12.4.1",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "next-auth": "^4.24.11",
